Changelog
=========


2.2 (unreleased)
----------------

- Added French translations.
  [ttschanz]

- Add special attribute _v__is_relation to css_class_from_obj to get a special
  icon when we display a related document
  [eschmutz

- Prevent obj deletion for anyone except Managers.
  (Subscriber for IObjectWillBeRemovedEvent that checks for 'Manage portal' permission)
  [lgraf]

- Changed grok context to make resolveoguid work everywere.
  [ttschanz]

- Increased webdav.LockItem.DEFAULTTIMEOUT to 24h
  [lgraf]

- Add wizard form base class and wizard template.
  [jone]

- Add wizard data storage.
  [jone]

- resolve_oguid: redirect to right client if oguid does not belong to "this" client.
  [jone]

- Client ID portlet should not crash when client configuration is missing.
  [jone]


2.1 (2011-11-29)
----------------

- Ajust the condition for the remote client expose: check the Member role instead of is_client_assigned:
  So the expose wouldn't be displayed for users from the reader_group.
  [phgross]

- Made sure an initial version gets created when an object is copied and pasted
  Issue #1306 History Viewlet erscheint nicht immer, Initialversion wird nicht immer erstellt.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1306/
  [lgraf]

- Removed `extedit` action from `portal_tabs` category
  [lgraf]


2.0 (2011-11-17)
----------------

- Fixed Unicode error in file download viewlet and added tests for it.
  Issue #1302 Fehler in der download_file_version view
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1302/
  [lgraf]

- Changed standard datetime format for xlsreport helper.
  Issue #1038 Statistiken/Auswertungen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1038
  [phgross]

- Fixed bug in accessing request variable in object_paste.cpy
  [lgraf]

- Overwrite the contentviews viewlet and remove the showEditableBorder condition: